# geometry_clipmaps_testbed

./: README.md
projects/assignment4/: CMakeLists.txt
projects/assignment4/assets/shaders/: clipmaps_fs.glsl  clipmaps_vs.glsl  debug_fs.glsl  debug_vs.glsl  picking_fs.glsl  picking_vs.glsl  simple_fs.glsl  simple_vs.glsl  skybox_fs.glsl  skybox_vs.glsl  text_fs.glsl  text_vs.glsl
projects/assignment4/assignment4/: aabb.h  camera.cc  camera.h  clipmapgrid.cc  clipmapgrid.h  contact.h  fbo.cc  fbo.h  light.cc  light.h  main.cc  mesh.cc  mesh.h  node.cc  node.h  obb.h  packedvertex.cc  packedvertex.h  renderscene.cc  renderscene.h  rigidbody.cc  rigidbody.h  root.cc  root.h  shadermanager.cc  shadermanager.h  skybox.cc  skybox.h  sweepvalue.h  textrenderer.cc  textrenderer.h  texture.cc  texture.h
projects/assignment4/assignment4/debugrenderer/: debugline.cc  debugline.h  debugmodel.cc  debugmodel.h  debugpoint.cc  debugpoint.h  debugrenderer.cc  debugrenderer.h  debugshape.cc  debugshape.h
projects/extralibs/: CMakeLists.txt
projects/extralibs/mypersonalmathlibrary/: CMakeLists.txt
projects/extralibs/mypersonalmathlibrary/mypersonalmathlibrary/: matrix33.cc  matrix33.h  matrix44.cc  matrix44.h  mypersonalmathlib.h  quaternion.cc  quaternion.h  vector2.cc  vector2.h  vector3.cc  vector3.h  vector4.cc  vector4.h
