#--------------------------------------------------------------------------
# example project
#--------------------------------------------------------------------------

PROJECT(assignment4)
#avoids long include path
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/debugrenderer)

FILE(GLOB HEAD ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/*.h)
FILE(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/*.cc)
SET(SRCSBASE ${HEAD} ${SRC})
SOURCE_GROUP(${PROJECT_NAME} FILES ${SRCSBASE})

FILE(GLOB HEAD ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/debugrenderer/*.h)
FILE(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/debugrenderer/*.cc)
SET(SRCSBASEDEBUGRENDERER ${HEAD} ${SRC})
SOURCE_GROUP(${PROJECT_NAME}\\debugrenderer FILES ${SRCSBASEDEBUGRENDERER}) #backslashes to specify subfolders

LIST(APPEND ALLSRCS ${SRCSBASE} ${SRCSBASEDEBUGRENDERER})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

ADD_EXECUTABLE(${PROJECT_NAME}  ${ALLSRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}  core render mypersonalmathlibrary freetype extralibs)
ADD_DEPENDENCIES(${PROJECT_NAME} core render mypersonalmathlibrary freetype)


#Create directory before build
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}  PRE_BUILD
					COMMAND ${CMAKE_COMMAND} -E make_directory
						${CMAKE_CURRENT_SOURCE_DIR}/bin)

#Copy folders to bin after build
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}  POST_BUILD
					DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/shaders
					COMMAND ${CMAKE_COMMAND} -E copy_directory
						${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders ${CMAKE_CURRENT_SOURCE_DIR}/bin/shaders
					COMMAND ${CMAKE_COMMAND} -E copy_directory
						${CMAKE_CURRENT_SOURCE_DIR}/assets/textures ${CMAKE_CURRENT_SOURCE_DIR}/bin/textures
					COMMAND ${CMAKE_COMMAND} -E copy_directory
						${CMAKE_CURRENT_SOURCE_DIR}/assets/models ${CMAKE_CURRENT_SOURCE_DIR}/bin/models
					COMMAND ${CMAKE_COMMAND} -E copy_directory
						${CMAKE_CURRENT_SOURCE_DIR}/assets/fonts ${CMAKE_CURRENT_SOURCE_DIR}/bin/fonts)

		
if(MSVC)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_debug" RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/bin)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX "_relwithdebinfo" RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/bin)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RELEASE_POSTFIX "_release" RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES MINSIZEREL_POSTFIX "_minsizerel" RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_CURRENT_SOURCE_DIR}/bin)
endif()